# chess-bot

./: .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
src/: main.cpp
src/board/: board.cpp  board.hpp  coordinate.cpp  coordinate.hpp  engine.cpp  engine.hpp  enum.hpp  helpers.cpp  helpers.hpp  move_result.cpp  move_result.hpp  piece.cpp  piece.hpp
src/common/: app_state.cpp  app_state.hpp  board.hpp  common_structs.hpp  enum.hpp  functions.cpp  functions.hpp  piece.cpp  piece.hpp  piece_type.hpp
src/engine/: engine.cpp  engine.hpp  engine_state.cpp  engine_state.hpp
src/gui/: gui_init.cpp  gui_init.hpp  gui_main.cpp  gui_main.hpp  piece_sprite.cpp  piece_sprite.hpp  promotion.cpp  promotion.hpp
